build/log/idf_py_stdout_output_148437
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/moritz/coding/ils3000-arduino/build/bootloader/esp-idf/esptool_py && /home/moritz/.espressif/python_env/idf5.2_py3.10_env/bin/python /home/moritz/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/moritz/coding/ils3000-arduino/build/bootloader/bootloader.bin
Bootloader binary size 0x6850 bytes. 0x7b0 bytes (7%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ils3000_demo.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/ils3000_demo.c.obj 
/home/moritz/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/moritz/coding/ils3000-arduino/build/config -I/home/moritz/esp/esp-idf/components/newlib/platform_include -I/home/moritz/esp/esp-idf/components/freertos/config/include -I/home/moritz/esp/esp-idf/components/freertos/config/include/freertos -I/home/moritz/esp/esp-idf/components/freertos/config/xtensa/include -I/home/moritz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/moritz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/moritz/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/moritz/esp/esp-idf/components/freertos/esp_additions/include -I/home/moritz/esp/esp-idf/components/esp_hw_support/include -I/home/moritz/esp/esp-idf/components/esp_hw_support/include/soc -I/home/moritz/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/moritz/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/moritz/esp/esp-idf/components/heap/include -I/home/moritz/esp/esp-idf/components/log/include -I/home/moritz/esp/esp-idf/components/soc/include -I/home/moritz/esp/esp-idf/components/soc/esp32 -I/home/moritz/esp/esp-idf/components/soc/esp32/include -I/home/moritz/esp/esp-idf/components/hal/platform_port/include -I/home/moritz/esp/esp-idf/components/hal/esp32/include -I/home/moritz/esp/esp-idf/components/hal/include -I/home/moritz/esp/esp-idf/components/esp_rom/include -I/home/moritz/esp/esp-idf/components/esp_rom/include/esp32 -I/home/moritz/esp/esp-idf/components/esp_rom/esp32 -I/home/moritz/esp/esp-idf/components/esp_common/include -I/home/moritz/esp/esp-idf/components/esp_system/include -I/home/moritz/esp/esp-idf/components/esp_system/port/soc -I/home/moritz/esp/esp-idf/components/esp_system/port/include/private -I/home/moritz/esp/esp-idf/components/xtensa/esp32/include -I/home/moritz/esp/esp-idf/components/xtensa/include -I/home/moritz/esp/esp-idf/components/xtensa/deprecated_include -I/home/moritz/esp/esp-idf/components/lwip/include -I/home/moritz/esp/esp-idf/components/lwip/include/apps -I/home/moritz/esp/esp-idf/components/lwip/include/apps/sntp -I/home/moritz/esp/esp-idf/components/lwip/lwip/src/include -I/home/moritz/esp/esp-idf/components/lwip/port/include -I/home/moritz/esp/esp-idf/components/lwip/port/freertos/include -I/home/moritz/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/moritz/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/moritz/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/moritz/esp/esp-idf/components/bt/include/esp32/include -I/home/moritz/esp/esp-idf/components/bt/common/osi/include -I/home/moritz/esp/esp-idf/components/bt/common/api/include/api -I/home/moritz/esp/esp-idf/components/bt/common/btc/profile/esp/blufi/include -I/home/moritz/esp/esp-idf/components/bt/common/btc/profile/esp/include -I/home/moritz/esp/esp-idf/components/bt/host/bluedroid/api/include/api -I/home/moritz/esp/esp-idf/components/bt/porting/ext/tinycrypt/include -I/home/moritz/esp/esp-idf/components/esp_timer/include -I/home/moritz/esp/esp-idf/components/esp_wifi/include -I/home/moritz/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/moritz/esp/esp-idf/components/esp_event/include -I/home/moritz/esp/esp-idf/components/esp_phy/include -I/home/moritz/esp/esp-idf/components/esp_phy/esp32/include -I/home/moritz/esp/esp-idf/components/esp_netif/include -I/home/moritz/esp/esp-idf/components/nvs_flash/include -I/home/moritz/esp/esp-idf/components/spi_flash/include -I/home/moritz/esp/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/moritz/coding/ils3000-arduino=. -fmacro-prefix-map=/home/moritz/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/ils3000_demo.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/ils3000_demo.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/ils3000_demo.c.obj -c /home/moritz/coding/ils3000-arduino/main/ils3000_demo.c
/home/moritz/coding/ils3000-arduino/main/ils3000_demo.c: In function 'print_bytearray':
/home/moritz/coding/ils3000-arduino/main/ils3000_demo.c:288:27: warning: 'sizeof' on array function parameter 'buf' will return size of 'uint8_t *' {aka 'unsigned char *'} [-Wsizeof-array-argument]
  288 |     for (i = 0; i < sizeof(buf) / sizeof(buf[0]); i++)
      |                           ^
/home/moritz/coding/ils3000-arduino/main/ils3000_demo.c:286:30: note: declared here
  286 | void print_bytearray(uint8_t buf[]) {
      |                      ~~~~~~~~^~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_demo.c: In function 'gatts_profile_a_event_handler':
/home/moritz/coding/ils3000-arduino/main/ils3000_demo.c:322:2: error: #endif without #if
  322 | #endif
      |  ^~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_demo.c: At top level:
/home/moritz/coding/ils3000-arduino/main/ils3000_demo.c:174:27: warning: 'b_prepare_write_env' defined but not used [-Wunused-variable]
  174 | static prepare_type_env_t b_prepare_write_env;
      |                           ^~~~~~~~~~~~~~~~~~~
/home/moritz/coding/ils3000-arduino/main/ils3000_demo.c:61:29: warning: 'b_property' defined but not used [-Wunused-variable]
   61 | static esp_gatt_char_prop_t b_property = 0;
      |                             ^~~~~~~~~~
ninja: build stopped: subcommand failed.
